# Parquet

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-examples.yml  build.yml
examples/: AnyChar3-6-12.c  AnyChar3.c  CMakeLists.txt  DeclVar.c  Identifier.c  MPL.c  String.c
examples/Base/: String.c
examples/ExecBinPreparer/: CreateExecutable.c
examples/ExecutableBinaryPreparer/: CreateExecutable.c
examples/ExecutablePreparer/: CreateExecutable.c
examples/ParserCombinator/: AnyChar3-6-12.c  DeclVar.c  MPL.c  SeqParse.c
examples/ParserCombinator/mplprs/: MPLLexer.c  MPLParser.c  MPLParser.h  Printer.c  Printer.h  Token.c  Token.h  mplprs.c  sum.mpl
examples/ParserCombinator/mpltok/: MPLLexer.c  MPLLexer.h  mpltok.c
examples/mplc/: MPLLexer.c  MPLLexer.h  MPLParser.c  MPLParser.h  TokenCollector.c  TokenCollector.h  mplc.c
examples/mplprs/: MPLParser.c  MPLParser.h  Token.h  mplprs.c  sum.mpl  sum_err.mpl  sum_err_enddot.mpl
examples/mpltok/: MPLLexer.c  MPLLexer.h  mpltok.c  sum.mpl
examples/other/: Error.c  List.c  Memory.c
include/: Parquet.h  Scraper.h
include/Parquet/: Base.h  ExecBinPreparer.h  ExecutableBinaryPreparer.h  ExecutablePreparer.h  ParserCombinator.h
include/Parquet/Base/: List.h  Memory.h  Seq.h  String.h  Tag.h
include/Parquet/ParserCombinator/: Basis.h  Combinator.h  Invoker.h  Parser.h  Parsers.h  Result.h
include/Parquet/ParserCombinator/Sequence/: SeqBasis.h  SeqCombinator.h  SeqInvoker.h  SeqParser.h  SeqParsers.h
include/Scraper/: Basis.h  Combinator.h  Invoker.h  List.h  Memory.h  Parse.h  Parser.h  Primitive.h  Result.h  String.h
lib/: CMakeLists.txt
lib/Parquet/: ExecBinPreparer.c  ExecutableBinaryPreparer.c  ExecutablePreparer.c
lib/Parquet/Base/: List.c  Seq.c  String.c
lib/Parquet/ParserCombinator/: Basis.c  Combinator.c  Invoker.c  Parser.c  Parsers.c
lib/Parquet/ParserCombinator/Sequence/: SeqBasis.c  SeqCombinator.c  SeqInvoker.c  SeqParsers.c
lib/Scraper/: Basis.c  CMakeLists.txt  Combinator.c  Error.c  Invoker.c  List.c  Memory.c  Parser.c  Primitive.c  String.c
